Uitwerking van de exercise

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <p>Mijn hobbies zijn als volgt: </p>
 
 <ul>
-	<li>Voetballen</li>
-	<li>Gamen</li>
-	<li>Slapen</li>
+	<li><a href="https://nl.wikipedia.org/wiki/Voetbal">Voetballen</a></li>
+	<li><a href="https://nl.wikipedia.org/wiki/Computerspel">Gamen</a></li>
+	<li><a href="https://nl.wikipedia.org/wiki/Slaap_(rust)">Slapen</a></li>
 </ul>
 
 
